Save and load json files

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -5,7 +5,15 @@ Sources="Sources"
 Filters="Filters"
 CopyScene="Copy Scene"
 PasteScene="Paste Scene"
+SaveScene="Save Scene"
+LoadScene="Load Scene"
 CopyGroup="Copy Group"
+SaveGroup="Save Group"
 CopySource="Copy Source"
 PasteSource="Paste Source"
+SaveSource="Save Source"
+LoadSource="Load Source"
+CopyFilter="Copy Filter"
 PasteFilter="Paste Filter"
+SaveFilter="Save Filter"
+LoadFilter="Load Filter"
