copy and paste transform

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -17,3 +17,5 @@ CopyFilter="Copy Filter"
 PasteFilter="Paste Filter"
 SaveFilter="Save Filter"
 LoadFilter="Load Filter"
+CopyTransform="Copy Transform"
+PasteTransform="Paste Transform"
