--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -19,3 +19,5 @@ SaveFilter="Save Filter"
 LoadFilter="Load Filter"
 CopyTransform="Copy Transform"
 PasteTransform="Paste Transform"
+SaveTransform="Save Transform"
+LoadTransform="Load Transform"
