add options to copy script settings

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -21,3 +21,8 @@ CopyTransform="Copy Transform"
 PasteTransform="Paste Transform"
 SaveTransform="Save Transform"
 LoadTransform="Load Transform"
+Scripts="Scripts"
+CopyScript="Copy Script"
+PasteScript="Paste Script"
+SaveScript="Save Script"
+LoadScript="Load Script"
