add options to copy show and hide transitions

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -26,3 +26,11 @@ CopyScript="Copy Script"
 PasteScript="Paste Script"
 SaveScript="Save Script"
 LoadScript="Load Script"
+CopyShowTransition="Copy Show Transition"
+PasteShowTransition="Paste Show Transition"
+SaveShowTransition="Save Show Transition"
+LoadShowTransition="Load Show Transition"
+CopyHideTransition="Copy Hide Transition"
+PasteHideTransition="Paste Hide Transition"
+SaveHideTransition="Save Hide Transition"
+LoadHideTransition="Load Hide Transition"
