Translating more words

--- a/data/locale/pt-BR.ini
+++ b/data/locale/pt-BR.ini
@@ -17,20 +17,20 @@ CopyFilter="Copiar Filtro"
 PasteFilter="Colar Filtro"
 SaveFilter="Salvar Filtro"
 LoadFilter="Carregar Filtro"
-CopyTransform="Copy Transform"
-PasteTransform="Paste Transform"
-SaveTransform="Save Transform"
-LoadTransform="Load Transform"
+CopyTransform="Copiar Transformação"
+PasteTransform="Colar Transformação"
+SaveTransform="Salvar Transformação"
+LoadTransform="Carregar Transformação"
 Scripts="Scripts"
 CopyScript="Copiar Script"
 PasteScript="Colar Script"
 SaveScript="Salvar Script"
 LoadScript="Carregar Script"
-CopyShowTransition="Copy Show Transition"
-PasteShowTransition="Paste Show Transition"
-SaveShowTransition="Save Show Transition"
-LoadShowTransition="Load Show Transition"
-CopyHideTransition="Copy Hide Transition"
-PasteHideTransition="Paste Hide Transition"
-SaveHideTransition="Save Hide Transition"
-LoadHideTransition="Load Hide Transition"
+CopyShowTransition="Copiar Transição ao Mostrar"
+PasteShowTransition="Colar Transição ao Mostrar"
+SaveShowTransition="Salvar Transição ao Mostrar"
+LoadShowTransition="Carregar Transição ao Mostrar"
+CopyHideTransition="Copiar Transição ao Ocultar"
+PasteHideTransition="Colar Transição ao Ocultar"
+SaveHideTransition="Salvar Transição ao Ocultar"
+LoadHideTransition="Carregar Transição ao Ocultar"
