Add canvas support

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -34,3 +34,4 @@ CopyHideTransition="Copy Hide Transition"
 PasteHideTransition="Paste Hide Transition"
 SaveHideTransition="Save Hide Transition"
 LoadHideTransition="Load Hide Transition"
+MainCanvas="Main Canvas"
