Update pt-BR translation
However... MainCanvas seems not be present in the source code...

--- a/data/locale/pt-BR.ini
+++ b/data/locale/pt-BR.ini
@@ -34,3 +34,4 @@ CopyHideTransition="Copiar Transição ao Ocultar"
 PasteHideTransition="Colar Transição ao Ocultar"
 SaveHideTransition="Salvar Transição ao Ocultar"
 LoadHideTransition="Carregar Transição ao Ocultar"
+MainCanvas="Tela Principal"
